# IntelliSense-RAG

./: .gitignore  README.md  app.py  main.py  pyproject.toml
chroma_db/: chroma.sqlite3
src/: __init__.py  config.py  llm_chain.py  pdf_loader.py  rag_pipeline.py  tempCodeRunnerFile.py  ui.py  vector_store.py
